--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241008172332">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241009105930">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -160,7 +160,7 @@
 							<a href="portfolio.html" class="menu-footer__link link">Portfolio</a>
 						</li>
 						<li class="menu-footer__item">
-							<a href="#" class="menu-footer__link link">Imprint</a>
+							<a href="info.html" class="menu-footer__link link">Imprint</a>
 						</li>
 					</ul>
 				</nav>
@@ -168,7 +168,7 @@
 		</footer>
 
 	</div>
-	<script src="js/app.min.js?_v=20241008172332"></script>
+	<script src="js/app.min.js?_v=20241009105930"></script>
 </body>
 
 </html>
