clear readme add likes

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -9,7 +9,7 @@
 					<a href="portfolio.html" class="menu-footer__link link">Portfolio</a>
 				</li>
 				<li class="menu-footer__item">
-					<a href="#" class="menu-footer__link link">Imprint</a>
+					<a href="info.html" class="menu-footer__link link">Imprint</a>
 				</li>
 			</ul>
 		</nav>
